src/test/ui/type-alias-impl-trait/nested.stderr
error[E0277]: `Bar` doesn't implement `Debug`
  --> $DIR/nested.rs:15:22
   |
LL |     println!("{:?}", bar());
   |                      ^^^^^ `Bar` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
